# stm32f103zet6-mecanum-car-controller

./: .cproject  .dockerignore  .gitignore  .mxproject  .project  Core_代码文档.md  Dockerfile  LICENSE  QWEN.md  README.md  README_PROJECT.md  STM32F103ZETX_FLASH.ld  docker-compose.yml  package-lock.json  roo.md  run_docker.sh  stm32-small-surface Debug.launch  stm32-small-surface.ioc
Core/: Src_代码文档.md
Core/Inc/: FreeRTOSConfig.h  communication.h  main.h  monitor.h  motor_control.h  pca9685.h  pid_controller.h  robot_types.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usb_comm.h  usb_handler.h
Core/Src/: communication.c  freertos.c  gpio.c  main.c  monitor.c  motor_control.c  pca9685.c  pid_controller.c  stm32f1xx_it.c  tim.c  usb_comm.c  usb_handler.c
Docu/: CUSTOM_SPEED_README.md  DETAILED_FILE_ANALYSIS.md  README_DOCKER.md  README_PROJECT.md  STM32_HAL_REPORT.md  USB_COMMUNICATION_ANALYSIS.md  UV_README.md  usb_telemetry_protocol.md
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
docs/plans/: 2026-02-01-sequence-create-tui-design.md  2026-02-02-sequence-create-no-serial-design.md
python/: COM4_TROUBLESHOOTING.md  LICENSE  README.md  README_DOCKER.md  README_TEXT_MODE.md  USAGE.md  __init__.py  batch_data_receiver.py  cobs_crc.py  config_loader.py  csv_analyzer.py  csv_exporter.py  keyboard_robot_control.py  pid_tuner_run_and_record.py  port_diagnostics.py  pyproject.toml  requirements.txt  robot_config.yaml  run_and_record_full.py  simple_test.py  start.sh  test_batch_receiver.py  test_port_connection.py  test_stm32_communication.py  tlv_protocol.py  usb_communication.py  windows_usb_reset.py
python-rasp/: README_RASP.md  config_loader.py  network_config.yaml  pyproject.toml  requirements.txt  robot_config.yaml  robot_control_server.py  start_rasp.sh
python/local_controller/: README.md  config.toml  main.py  pyproject.toml
python/local_controller/data/: forward2.csv  forward_fast.csv  forward_slow.csv  group3_forward.csv  group3_steering_large.csv  group3_steering_small.csv  sample_sequence.csv  sample_turn_switch_dir_10s.csv  steering3.csv  steering4.csv  steering_large2.csv  turn_29s_constant_large.csv  turn_29s_constant_medium.csv  turn_29s_constant_small.csv  turn_30s_constant.csv  turn_left_var_speed_15s.csv  turn_left_var_speed_9s.csv  turn_left_var_speed_large.csv  turn_left_var_speed_medium.csv  turn_left_var_speed_small.csv  turn_switch_dir_10s.csv
python/local_controller/data/group3/: steering_small.csv
python/local_controller/local_controller/: __init__.py  cli.py  config.py  serial_client.py  telemetry.py
python/local_controller/local_controller/modes/: base.py  remote.py  sequence.py  webdebug.py
python/network_control/: __init__.py  robot_control_client.py  robot_control_server.py
