[project]
name = "local-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
    "flask>=3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-pyserial>=3.5.0.20251001",
]

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_codes = true
warn_unused_configs = true
